# RealTimeValidationSystem

./: .gitignore  .travis.yml  README.md  setup.sh  test.sh
Comparator/: Compare.cpp  Compare.hpp  Makefile  Socket.cpp  main.cpp
Comparator/proto/: packet.pb.cc  packet.pb.h
Comparator/test/: CMakeLists.txt  Makefile  comparatorTest.cpp
Corruption/: CMakeLists.txt  Compare.cpp  Makefile  main.cpp
Corruption/filters/: Distortion.cpp  Distortion.hpp  Freeze.cpp  Freeze.hpp  Translate.cpp  Translate.hpp  White.cpp  White.hpp
Corruption/proto/: packet.pb.cc  packet.pb.h
Corruption/test/: CMakeLists.txt  Makefile  corruptionTest.cpp
WEB_UI/: package-lock.json
